--- a/demo-project/src/App.css
+++ b/demo-project/src/App.css
@@ -75,10 +75,36 @@
 
 .homepage-jobs-info {
     text-align: center;
-    height: 90vh;
+    height: 50vh;
     margin: 15vh 20vh;
 }
 
 .homepage-jobs-info > p {
     margin: 5vh;
+}
+
+.homepage-jobs-btn-section > button{
+    margin: 0 5%;
+}
+
+.jobInfo-card {
+    width: 65%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    border-top: 2px solid grey;
+}
+
+.jobInfo-img > img {
+    width: 70%;
+}
+
+.jobInfo-details {
+    display: flex;
+    font-size: 13px;
+}
+
+.jobInfo-details > p {
+    margin: 4%;
+    padding: 3%;
 }
